[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menus/Contrib.gd" type="Script" id=2]
[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=4]

[node name="ContribMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Title" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Contrib Packs"
align = 1
valign = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_right = -136.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 300.0
margin_bottom = 416.0
rect_min_size = Vector2( 300, 416 )
rect_clip_content = true
custom_constants/separation = 15
alignment = 1

[node name="Custom" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 300.0
margin_bottom = 223.0
text = "Load Level URL"

[node name="Done" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -53.0
margin_right = 96.0
margin_bottom = -23.0
text = "Done"

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Custom" to="." method="_on_Custom_pressed"]
[connection signal="mouse_entered" from="Panel/Done" to="." method="_on_Done_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Done" to="." method="_on_Done_mouse_exited"]
[connection signal="pressed" from="Panel/Done" to="." method="_on_Done_pressed"]
